--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8" />
-<title>Git の練習</title> </head>
+	<meta charset="UTF-8" />
+	<title>Git の練習</title>
+	<link ref="stylesheet" href="style.css">
+</head>
 <body>
-<h1>Git の練習</h1>
-<p>Git を練習しています</p> </body>
+	<h1>Git の練習</h1>
+	<p>Git を練習しています</p> </body>
 </html>
