--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
 	<h1>Git の練習</h1>
-	<p>ブランチを練習しています</p>
-	<p>クローンで変更。もう一度</p>
-	<p>notrackブランチを追加</p>
-	<p>notrackブランチを更新</p>
+	<p>Git を練習しています</p>
+	<p>練習しています</p>
 </body>
 </html>
